<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="right"
            android:padding="@dimen/_5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.7"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/_5"
                    android:text="@string/task"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_30"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/_15"
                    android:text="@string/welcome_back_to_myapp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_17"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradiant"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_10"
                android:layout_marginStart="@dimen/_5"
                android:layout_marginEnd="@dimen/_5">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.5">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10"
                        android:layout_marginBottom="@dimen/_10"
                        android:text="@string/signup"
                        android:textColor="@color/background"
                        android:textSize="@dimen/_27"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tv_name"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5"
                        android:hint="@string/HN"
                        app:boxStrokeColor="@color/background"
                        app:hintTextColor="@color/background"
                        app:startIconDrawable="@drawable/baseline_person_24"
                        app:startIconTint="@color/background">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tv_email"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5"
                        android:hint="@string/HE"
                        app:boxStrokeColor="@color/background"
                        app:hintTextColor="@color/background"
                        app:startIconDrawable="@drawable/baseline_email_24"
                        app:startIconTint="@color/background">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tv_pass"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5"
                        android:hint="@string/Hp"
                        app:boxStrokeColor="@color/background"
                        app:endIconMode="password_toggle"
                        app:endIconTint="@color/black"
                        app:hintTextColor="@color/background"
                        app:startIconDrawable="@drawable/baseline_lock_24"
                        app:startIconTint="@color/background">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_pass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tv_cpass"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5"
                        android:hint="@string/HCP"
                        app:boxStrokeColor="@color/background"
                        app:endIconMode="password_toggle"
                        app:endIconTint="@color/black"
                        app:hintTextColor="@color/background"
                        app:startIconDrawable="@drawable/baseline_lock_24"
                        app:startIconTint="@color/background">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_cpass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tv_mobile"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5"
                        android:hint="@string/enter_your_contact"
                        app:boxStrokeColor="@color/background"
                        app:hintTextColor="@color/background"
                        app:startIconDrawable="@drawable/baseline_local_phone_24"
                        app:startIconTint="@color/background">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_mobile_no"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number" />

                    </com.google.android.material.textfield.TextInputLayout>




                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_signup"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_60"
                        android:layout_marginTop="@dimen/_10"
                        android:backgroundTint="@color/background"
                        android:text="@string/Signup" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="@dimen/_10"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/tv_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@id/btn_signin"
                            android:text="@string/already_have_an_account"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/btn_signin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_3"
                            android:layout_toEndOf="@+id/tv_view"
                            android:gravity="center"
                            android:text="@string/Signin"
                            android:textColor="@color/background"
                            android:textSize="@dimen/_15"
                            android:textStyle="bold" />


                    </RelativeLayout>
                </LinearLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

</RelativeLayout>